# dagre-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
cross-validate/: SETUP.md  generate_reference.mjs  reference_data.json
src/: lib.rs  util.rs
src/graph/: alg.rs  json.rs  mod.rs  tests.rs
src/layout/: acyclic.rs  add_border_segments.rs  coordinate_system.rs  intersect.rs  mod.rs  nesting_graph.rs  normalize.rs  parent_dummy_chains.rs  tests.rs  types.rs  util.rs
src/layout/order/: add_subgraph_constraints.rs  barycenter.rs  build_layer_graph.rs  cross_count.rs  init_order.rs  mod.rs  resolve_conflicts.rs  sort.rs  sort_subgraph.rs
src/layout/position/: bk.rs  mod.rs
src/layout/rank/: feasible_tree.rs  mod.rs  network_simplex.rs  util.rs
tests/: cross_validate.rs
